Fix padding on small screen

--- a/src/styles/base/_settings.scss
+++ b/src/styles/base/_settings.scss
@@ -11,7 +11,7 @@ $m-size: 1.6rem;
 $l-size: 3.2rem;
 $xl-size: 4.8rem;
 $xxl-size: 6.4rem;
-$gigantic-size: 10rem;
+$gigantic-size: 8rem;
 $desktop-breakpoint: 60rem;
 $small-phone-breakpoint: 50rem;
 $max-content-width: 75rem;
