--- a/src/styles/components/_container.scss
+++ b/src/styles/components/_container.scss
@@ -12,6 +12,6 @@
 
 @media screen and (min-width: $small-phone-breakpoint) {
 	.container {
-		padding: $xl-size 15% 0 15%;
+		padding: $m-size 15% 10% 15%;
 	}
 }
